# CMakeOpenGL

./: Application.cpp  Application.h  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CallbackManager.h  Callbackable.h  Camera.cpp  Camera.h  Cubemap.cpp  Cubemap.h  EntityComponents.h  ErrorManager.cpp  ErrorManager.h  Field.cpp  Field.h  Font.cpp  Font.h  FunctionManager.cpp  FunctionManager.h  GLEnums.h  GLFWindowHolder.cpp  GLFWindowHolder.h  Initializable.h  InstancedModel.cpp  InstancedModel.h  Interface.cpp  Interface.h  Lights.h  Logger.h  Main.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  NotCopyable.cpp  NotCopyable.h  ResourceBatch.cpp  ResourceBatch.h  ResourceHolders.cpp  (+31 more)
dependencies/glad/: glad.c
dependencies/glad/glad/: glad.h
resources/catalogs/: cubemaps.json  fonts.json  interfaces.json  models.json  scenes.json  shaders.json  textures.json
resources/docs/: catalogs.md
resources/models/WoodenTable/: wooden_picnic_table_4k.gltf
resources/models/chair/: modern_arm_chair_01_4k.gltf
resources/models/rock/: boulder_01_4k.gltf
resources/models/utilitybox/: utility_box_02_4k.gltf
resources/shaders/: ColorFragmentShader.frag  CubemapFragmentShader.frag  CubemapVertexShader.vert  ExpandVertexShader.vert  FrameFragmentShader.frag  FrameVertexShader.vert  ModelFragmentShader.frag  ModelVertexShader.vert  PBRFragmentShader.frag  PBRVertexShader.vert  ProjPosVertexShader.vert  ProjTexVertexShader.vert  TexFragmentShader.frag  TextFragmentShader.frag
